--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.0",
     "d3-ease": "^2.0.0",
     "date-fns": "^2.0.0-beta.5",
+    "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^17.0.1",
