--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@lottiefiles/react-lottie-player": "^2.2.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.12",
     "@material-ui/icons": "^4.9.1",
@@ -23,6 +24,7 @@
     "react-hook-form": "^6.12.2",
     "react-move": "^6.4.0",
     "react-phone-input-2": "^2.13.9",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
